overlapping resolved

--- a/resume.css
+++ b/resume.css
@@ -17,6 +17,14 @@ body {
     font-feature-settings: "kern", "liga", "clig", "calt";
 }
 
+.home {
+    display: block;
+    max-width: 25rem;
+    margin-left: auto;
+    margin-right: auto;
+
+}
+
 .profile {
 
     margin-left: auto;
@@ -32,15 +40,13 @@ body {
         margin-left: 0;
         margin-right: 0;
     }
+
+    .home {
+        max-width: auto;
+    }
 }
 
 
-
-
-.home {
-    width: 40%;
-    height: auto;
-}
 
 h1 {
 
