--- a/styles.css
+++ b/styles.css
@@ -2,12 +2,12 @@ html {
     font: 'Merriweather', 'Georgia', serif;
 }
 
-* {
+/* * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 
-}
+} */
 
 
 #text-shadow {
@@ -54,25 +54,18 @@ body {
 }
 
 img {
+
     border-radius: 50%;
     width: 50%;
     height: auto;
-    margin-bottom: 1.75rem;
+
     max-width: fit-content;
 
 }
 
-/* .pic {
-    text-align: center;
-} */
-
-/* h1 {
-
-    transform: skewY(-10deg);
-} */
-
 .name {
-    top: 27%;
+
+    top: 20rem;
     left: 25%;
     position: absolute;
     display: flex;
@@ -88,16 +81,13 @@ img {
 }
 
 .profile {
-    /* padding: 2rem 0rem 0rem 0rem; */
     margin-left: auto;
     margin-right: auto;
     max-width: 40rem;
-    padding: 1.5rem 1.5rem;
+    padding: 2%;
     text-align: center;
 
 }
-
-
 
 
 /* @media only screen and(max-width: 1200) {
@@ -118,10 +108,9 @@ img {
 
 
 
-
 .link {
     color: #007acc;
-    top: 60%;
+    top: 40rem;
     left: 50%;
     margin-bottom: 1.75rem;
     transform: translate(-50%, -50%);
@@ -136,21 +125,6 @@ img {
 }
 
 
-
-/* ul {
-    color: #007acc;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    text-align: center;
-    box-sizing: border-box;
-    position: absolute;
-    min-width: none;
-
-} */
 
 h3 {
     margin-left: 0;
@@ -171,7 +145,7 @@ h3 {
 
 
 footer {
-    top: 70%;
+    top: 50rem;
     left: 50%;
     color: black;
     display: flex;
@@ -200,8 +174,8 @@ a:hover {
 
 .wrapper {
 
-    top: 50%;
-    left: 50%;
+    top: 35rem;
+    left: 48%;
     margin-bottom: 1.75rem;
     transform: translate(-50%, -50%);
     font-weight: 800;
